argocd-repo-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
      - command:
        - /var/run/argocd/argocd-cmp-server
        image: shraddhaopsmx/argocd-ssd-plugin:v0.0.3
        imagePullPolicy: Always
        name: ssd
        resources: {}
        securityContext:
          runAsNonRoot: true
          runAsUser: 999
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run/argocd
          name: var-files
        - mountPath: /home/argocd/cmp-server/plugins
          name: plugins
        - mountPath: /home/argocd/cmp-server/config/plugin.yaml
          name: cmp-config
          subPath: ssd-plugin.yaml
        - mountPath: /tmp
          name: cmp-tmp
      - command:
        - /var/run/argocd/argocd-cmp-server
        image: shraddhaopsmx/argocd-ssd-plugin:v0.0.3
        imagePullPolicy: Always
        name: ssd-kustomize
        resources: {}
        securityContext:
          runAsNonRoot: true
          runAsUser: 999
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run/argocd
          name: var-files
        - mountPath: /home/argocd/cmp-server/plugins
          name: plugins
        - mountPath: /home/argocd/cmp-server/config/plugin.yaml
          name: cmp-config
          subPath: ssd-plugin-kustomize.yaml
        - mountPath: /tmp
          name: cmp-tmp
      - command:
        - /var/run/argocd/argocd-cmp-server
        image: shraddhaopsmx/argocd-ssd-plugin:v0.0.3
        imagePullPolicy: Always
        name: ssd-helm
        resources: {}
        securityContext:
          runAsNonRoot: true
          runAsUser: 999
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run/argocd
          name: var-files
        - mountPath: /home/argocd/cmp-server/plugins
          name: plugins
        - mountPath: /home/argocd/cmp-server/config/plugin.yaml
          name: cmp-config
          subPath: ssd-plugin-helm.yaml
        - mountPath: /tmp
          name: cmp-tmp
